# NUEDC-2023G

./: README.md
串口屏/: 16song.zi  24yaheiPart.zi
小车上位机/contest2023nano/: CMakeLists.txt  package.xml
小车上位机/contest2023nano/launch/: contest_all.launch
小车上位机/contest2023nano/scripts/: devices.py
小车上位机/contest2023nano/src/: Car.cpp  CarStop.cpp  T265Pose.hpp
飞控上位机/contest2023/: CMakeLists.txt  package.xml
飞控上位机/contest2023/msg/: camera_offset.msg  camera_yaw_fix.msg
飞控上位机/contest2023/src/: Camera.cpp  CtrlState.hpp  LidarPose.hpp  Pose.cpp  PoseNew.cpp  YoloTest.cpp
飞控上位机/my_utils/: CMakeLists.txt  package.xml
飞控上位机/my_utils/launch/: camera_all.launch  example2_all_node.launch  livox_all.launch  utils_test.launch
飞控上位机/my_utils/msg/: my_hook.msg  my_led.msg  my_led_unique.msg  my_location.msg  my_servo.msg
飞控上位机/my_utils/scripts/: codeCamera.py  codeD435.py  devices.py  devicesContest.py  saveVideo.py
飞控上位机/my_utils/src/: T265Compass.cpp  code.cpp  led.cpp  test.cpp  yolo.cpp
